added string resource button add

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="submit">Submit</string>
     <string name="delete">Delete</string>
     <string name="date">Date</string>
+    <string name="button_add_product">Button add product</string>
 </resources>
