--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="delete">Delete</string>
     <string name="date">Date</string>
     <string name="button_add_product">Button add product</string>
+    <string name="stock">Stock</string>
 </resources>
