added string resource code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="save">Simpan</string>
     <string name="edit">Ubah</string>
     <string name="update">Update</string>
+    <string name="code">code123</string>
 </resources>
