Changed string resource stock

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">KasirPintarTest</string>
-    <string name="stock_20">Stok: 20</string>
+    <string name="stock_count">Stok: %s</string>
     <string name="product_name">Product</string>
     <string name="submit">Submit</string>
     <string name="delete">Delete</string>
